# upwork_job_analytics

./: .gitignore  README.md  data.db  pyproject.toml
app/: analytics.py  bot_engine.py  confidence.py  config.py  db.py  main.py  models.py  normalize.py  ranking.py  recommendation.py  repo.py  scheduler.py  schemas.py  stack_extract.py
app/adapters/: manual_import.py
