[project]
name = "upwork-jobs-stats-bot"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
  "fastapi>=0.110",
  "uvicorn[standard]>=0.27",
  "pydantic>=2.6",
  "pydantic-settings>=2.2",
  "sqlalchemy>=2.0",
  "apscheduler>=3.10",
  "python-json-logger>=2.0",
]

[tool.uvicorn]
factory = false
